// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResultsScreen > スナップショットテスト > gameState="practicing"の見た目が一致する 1`] = `
<div>
  <div
    class="results-screen"
  >
    <p>
      結果がありません
    </p>
  </div>
</div>
`;

exports[`ResultsScreen > スナップショットテスト > gameState="setup"の見た目が一致する 1`] = `
<div>
  <div
    class="results-screen"
  >
    <p>
      結果がありません
    </p>
  </div>
</div>
`;

exports[`ResultsScreen > スナップショットテスト > ターゲットが設定されている場合の見た目が一致する 1`] = `
<div>
  <div
    class="results-screen"
  >
    <main
      class="results-screen__main"
    >
      <section
        aria-label="セッション結果"
        class="session-summary"
      >
        <h2
          class="session-summary__title"
        >
          練習結果
        </h2>
        <div
          class="session-summary__finish-reason"
        >
          <span
            class="session-summary__finish-reason-label"
          >
            終了理由:
          </span>
          <span
            class="session-summary__finish-reason-value"
          >
            手動終了
          </span>
        </div>
        <div
          class="session-summary__stats-grid"
        >
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              総問題数
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              20
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              正解数
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              15
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item session-summary__stat-item--highlight"
          >
            <dt
              class="session-summary__stat-label"
            >
              正答率
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              75.0%
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              最高連続正解
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              5
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              経過時間
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              2:05
            </dd>
          </dl>
        </div>
        <div
          class="session-summary__config-section"
        >
          <h3
            class="session-summary__config-title"
          >
            練習設定
          </h3>
          <dl
            class="session-summary__config-list"
          >
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                モード
              </dt>
              <dd
                class="session-summary__config-value"
              >
                🎯
                 
                基礎練習
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                難易度
              </dt>
              <dd
                class="session-summary__config-value"
              >
                中級者
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                ターゲット
              </dt>
              <dd
                class="session-summary__config-value"
              >
                T20
              </dd>
            </div>
          </dl>
        </div>
      </section>
    </main>
    <footer
      class="results-screen__footer"
    >
      <button
        aria-label="同じ設定で再挑戦"
        class="results-screen__button results-screen__button--retry"
        type="button"
      >
        同じ設定で再挑戦
      </button>
      <button
        aria-label="設定を変更"
        class="results-screen__button results-screen__button--settings"
        type="button"
      >
        設定を変更
      </button>
    </footer>
  </div>
</div>
`;

exports[`ResultsScreen > スナップショットテスト > 基本的なレンダリング結果が一致する 1`] = `
<div>
  <div
    class="results-screen"
  >
    <main
      class="results-screen__main"
    >
      <section
        aria-label="セッション結果"
        class="session-summary"
      >
        <h2
          class="session-summary__title"
        >
          練習結果
        </h2>
        <div
          class="session-summary__finish-reason"
        >
          <span
            class="session-summary__finish-reason-label"
          >
            終了理由:
          </span>
          <span
            class="session-summary__finish-reason-value"
          >
            手動終了
          </span>
        </div>
        <div
          class="session-summary__stats-grid"
        >
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              総問題数
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              20
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              正解数
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              15
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item session-summary__stat-item--highlight"
          >
            <dt
              class="session-summary__stat-label"
            >
              正答率
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              75.0%
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              最高連続正解
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              5
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              経過時間
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              2:05
            </dd>
          </dl>
        </div>
        <div
          class="session-summary__config-section"
        >
          <h3
            class="session-summary__config-title"
          >
            練習設定
          </h3>
          <dl
            class="session-summary__config-list"
          >
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                モード
              </dt>
              <dd
                class="session-summary__config-value"
              >
                🎯
                 
                基礎練習
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                難易度
              </dt>
              <dd
                class="session-summary__config-value"
              >
                中級者
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                ターゲット
              </dt>
              <dd
                class="session-summary__config-value"
              >
                自動
              </dd>
            </div>
          </dl>
        </div>
      </section>
    </main>
    <footer
      class="results-screen__footer"
    >
      <button
        aria-label="同じ設定で再挑戦"
        class="results-screen__button results-screen__button--retry"
        type="button"
      >
        同じ設定で再挑戦
      </button>
      <button
        aria-label="設定を変更"
        class="results-screen__button results-screen__button--settings"
        type="button"
      >
        設定を変更
      </button>
    </footer>
  </div>
</div>
`;

exports[`ResultsScreen > スナップショットテスト > 時間制限モードの場合の見た目が一致する 1`] = `
<div>
  <div
    class="results-screen"
  >
    <main
      class="results-screen__main"
    >
      <section
        aria-label="セッション結果"
        class="session-summary"
      >
        <h2
          class="session-summary__title"
        >
          練習結果
        </h2>
        <div
          class="session-summary__finish-reason"
        >
          <span
            class="session-summary__finish-reason-label"
          >
            終了理由:
          </span>
          <span
            class="session-summary__finish-reason-value"
          >
            手動終了
          </span>
        </div>
        <div
          class="session-summary__stats-grid"
        >
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              総問題数
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              20
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              正解数
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              15
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item session-summary__stat-item--highlight"
          >
            <dt
              class="session-summary__stat-label"
            >
              正答率
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              75.0%
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              最高連続正解
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              5
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              経過時間
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              2:05
            </dd>
          </dl>
        </div>
        <div
          class="session-summary__config-section"
        >
          <h3
            class="session-summary__config-title"
          >
            練習設定
          </h3>
          <dl
            class="session-summary__config-list"
          >
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                モード
              </dt>
              <dd
                class="session-summary__config-value"
              >
                🎯
                 
                基礎練習
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                難易度
              </dt>
              <dd
                class="session-summary__config-value"
              >
                中級者
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                ターゲット
              </dt>
              <dd
                class="session-summary__config-value"
              >
                自動
              </dd>
            </div>
          </dl>
        </div>
      </section>
    </main>
    <footer
      class="results-screen__footer"
    >
      <button
        aria-label="同じ設定で再挑戦"
        class="results-screen__button results-screen__button--retry"
        type="button"
      >
        同じ設定で再挑戦
      </button>
      <button
        aria-label="設定を変更"
        class="results-screen__button results-screen__button--settings"
        type="button"
      >
        設定を変更
      </button>
    </footer>
  </div>
</div>
`;

exports[`ResultsScreen > スナップショットテスト > 開始点数が設定されている場合の見た目が一致する 1`] = `
<div>
  <div
    class="results-screen"
  >
    <main
      class="results-screen__main"
    >
      <section
        aria-label="セッション結果"
        class="session-summary"
      >
        <h2
          class="session-summary__title"
        >
          練習結果
        </h2>
        <div
          class="session-summary__finish-reason"
        >
          <span
            class="session-summary__finish-reason-label"
          >
            終了理由:
          </span>
          <span
            class="session-summary__finish-reason-value"
          >
            手動終了
          </span>
        </div>
        <div
          class="session-summary__stats-grid"
        >
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              総問題数
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              20
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              正解数
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              15
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item session-summary__stat-item--highlight"
          >
            <dt
              class="session-summary__stat-label"
            >
              正答率
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              75.0%
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              最高連続正解
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              5
            </dd>
          </dl>
          <dl
            class="session-summary__stat-item"
          >
            <dt
              class="session-summary__stat-label"
            >
              経過時間
            </dt>
            <dd
              class="session-summary__stat-value"
            >
              2:05
            </dd>
          </dl>
        </div>
        <div
          class="session-summary__config-section"
        >
          <h3
            class="session-summary__config-title"
          >
            練習設定
          </h3>
          <dl
            class="session-summary__config-list"
          >
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                モード
              </dt>
              <dd
                class="session-summary__config-value"
              >
                🎯
                 
                基礎練習
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                難易度
              </dt>
              <dd
                class="session-summary__config-value"
              >
                中級者
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                ターゲット
              </dt>
              <dd
                class="session-summary__config-value"
              >
                自動
              </dd>
            </div>
            <div
              class="session-summary__config-item"
            >
              <dt
                class="session-summary__config-label"
              >
                開始点数
              </dt>
              <dd
                class="session-summary__config-value"
              >
                501
              </dd>
            </div>
          </dl>
        </div>
      </section>
    </main>
    <footer
      class="results-screen__footer"
    >
      <button
        aria-label="同じ設定で再挑戦"
        class="results-screen__button results-screen__button--retry"
        type="button"
      >
        同じ設定で再挑戦
      </button>
      <button
        aria-label="設定を変更"
        class="results-screen__button results-screen__button--settings"
        type="button"
      >
        設定を変更
      </button>
    </footer>
  </div>
</div>
`;
